# FTDI

./: .gitignore  CMakeLists.txt  envSetup.ps1
Drivers/CDM v2.08.24 WinXP LIRA/: ftd2xx.h  ftdibus.inf  ftdibus_inf WinXP LIRA Changes.htm  ftdiport.inf  ftdiport_inf WinXP LIRA Changes.htm
Drivers/CDM v2.12.28 WHQL Certified/: ftd2xx.h
Drivers/MProg 3.5 Release/Templates/: Aux_Control_B.ept  Dinamik.ept  Dinamik_to_FTDI.ept  KTV6.ept  LKO_CDC.ept  LKO_GGS.ept  LKO_Radio.ept  LKO_UART.ept  Line_interface.ept  MHub_Control_3.ept  MHub_Tangenta_2.ept  PPRP.ept  PPRP_75mA.ept  Tangenta.ept  Tangenta_FT245.ept
RefProjects/CSChipID/: CSChipID.sln  UpgradeLog.htm
RefProjects/CSChipID/CSChipID/: CSChipID.csproj
RefProjects/Console/: ChipID.cpp  FTChipID.h  FTD2XX.H  ReadMe.txt
RefProjects/Win32/ChipID/: ChipID.cpp  ChipID.dsp  ChipID.dsw  ChipID.ncb  ChipID.opt  ChipID.plg  ChipID.rc  ChipID.vcxproj  ChipID.vcxproj.filters  RCa12720  ReadMe.txt  UpgradeLog.htm  mssccprj.scc  resource.h  vssver.scc
libs/: CMakeLists.txt
libs/ftdi/: CMakeLists.txt
libs/ftdi/test/: main.cpp
libs/lira/: CMakeLists.txt
libs/lira/include/: usbEnum.h
libs/lira/src/: usbEnum.cpp  usbEnum.hpp
libs/lira/test/: main.cpp
